--- a/src/assets/css/argon-dashboard-react.css
+++ b/src/assets/css/argon-dashboard-react.css
@@ -16198,14 +16198,13 @@ button:focus, :focus {
 .MostOrdered {
   border: 1px solid lightgrey;
   width: 100%;
-  padding: 10px;
+  padding: 2px;
   font-size: 11px;
-  font-weight: bold;
+  font-weight: 600;
   background-color: #f3f4fa;
   border-radius: 5px;
   box-shadow: 2px 1px 5px 1px lightgrey;
   min-height: 50px;
-  padding-top: 10%;
   text-align: center;
   cursor: pointer;
 }
@@ -16318,4 +16317,17 @@ button:focus, :focus {
   font-size: 12px;
   padding-left: 10px !important;
   padding-right: 10px !important;
+}
+
+.carousel {
+  position: relative;
+  min-height: 182px;
+}
+
+.carousel-control-prev-icon {
+  background-image: url(../img/icons/common/less-than.png);
+}
+
+.carousel-control-next-icon {
+  background-image: url(../img/icons/common/greater-than.png);
 }
