--- a/src/assets/css/argon-dashboard-react.css
+++ b/src/assets/css/argon-dashboard-react.css
@@ -16242,6 +16242,7 @@ button:focus, :focus {
   border-bottom: 1px solid #e7dfdf;
   padding: 10px;
   cursor: pointer;
+  font-size: 12px;
 }
 
 .quanity-icon {
@@ -16292,14 +16293,13 @@ button:focus, :focus {
 .MostOrderedCategory {
   border: 1px solid lightgrey;
   width: 100%;
-  padding: 10px;
+  padding: 5px;
   font-size: 11px;
   font-weight: bold;
   background-color: paleturquoise;
   border-radius: 5px;
   box-shadow: 2px 1px 5px 1px lightgrey;
   min-height: 50px;
-  padding-top: 10%;
   text-align: center;
   cursor: pointer;
 }
