--- a/src/assets/css/argon-dashboard-react.css
+++ b/src/assets/css/argon-dashboard-react.css
@@ -16413,3 +16413,55 @@ button:focus, :focus {
   margin-left: 5%;
   margin-right: 5%;
 }
+
+.credit {
+  text-align: left;
+  font-size: 12px;
+  background-color: #1188ef;
+  color: white;
+  border-radius: 0 15px 15px 0;
+  margin-bottom: 2%;
+}
+
+.debit {
+  text-align: left;
+  font-size: 12px;
+  background-color: #66cde185;
+  border-radius: 15px 0 0 15px;
+  margin-bottom: 2%;
+}
+
+.transactions tbody {
+  display:block;
+  max-height:350px;
+  overflow-y:auto;
+}
+
+.transactions thead, .transactions tbody tr {
+  display:table;
+  width:100%;
+}
+
+.w-15 {
+  width: 15%;
+}
+
+.w-19 {
+  width: 19%;
+}
+
+.w-20 {
+  width: 20%;
+}
+
+.w-45 {
+  width: 45%;
+}
+
+.w-47 {
+  width: 47%;
+}
+
+.footer {
+  padding: 2% 0 !important;
+}
